// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngestionConsumer error handling should handled expected error failures such as eventDroppedError and write to the DLQ 1`] = `
[
  {
    "key": "THIS IS NOT A TOKEN FOR TEAM 2:user-1",
    "topic": "events_plugin_ingestion_dlq_test",
    "value": {
      "data": "{"distinct_id":"user-1","uuid":"<REPLACED-UUID-0>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "user-1",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow force overflow should force events with matching token:distinct_id to overflow: force overflow messages 1`] = `
[
  {
    "key": "THIS IS NOT A TOKEN FOR TEAM 2:team1-user",
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"team1-user","uuid":"<REPLACED-UUID-0>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "team1-user",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow force overflow should handle multiple token:distinct_id pairs in force overflow setting: force overflow messages multiple pairs 1`] = `
[
  {
    "key": "THIS IS NOT A TOKEN FOR TEAM 2:user1",
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"user1","uuid":"<REPLACED-UUID-0>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "user1",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": "<REPLACED-UUID-1>:user2",
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"user2","uuid":"<REPLACED-UUID-2>","token":"<REPLACED-UUID-1>","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "user2",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "<REPLACED-UUID-1>",
      "uuid": "<REPLACED-UUID-2>",
    },
  },
]
`;

exports[`IngestionConsumer general overflow should emit to overflow if token and distinct_id are overflowed 1`] = `
[
  {
    "key": null,
    "topic": "events_plugin_ingestion_overflow_test",
    "value": {
      "data": "{"distinct_id":"overflow-distinct-id","uuid":"<REPLACED-UUID-0>","token":"THIS IS NOT A TOKEN FOR TEAM 2","ip":"127.0.0.1","site_url":"us.posthog.com","now":"2025-01-01T00:00:00.000Z","event":"$pageview","properties":{"$current_url":"http://localhost:8000"}}",
      "distinct_id": "overflow-distinct-id",
      "ip": "127.0.0.1",
      "now": "2025-01-01T00:00:00.000Z",
      "token": "THIS IS NOT A TOKEN FOR TEAM 2",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer general should process a standard event 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-1>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing $identify event 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing ai event 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$ai_generation",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$ai_model":"gpt-4","$ai_provider":"openai","$ai_input_tokens":100,"$ai_output_tokens":50,"$ip":"127.0.0.1","$ai_input_cost_usd":0.003,"$ai_output_cost_usd":0.003,"$ai_total_cost_usd":0.006}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing bad uuid 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_ingestion_warnings_test",
    "value": {
      "details": "{"eventUuid":"WAT","event":"$pageview","distinctId":"user-1"}",
      "source": "plugin-server",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "type": "invalid_event_uuid",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing client ingestion warning 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_ingestion_warnings_test",
    "value": {
      "details": "{"eventUuid":"<REPLACED-UUID-0>","event":"$$client_ingestion_warning","distinctId":"user-1","message":"test"}",
      "source": "plugin-server",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "type": "client_ingestion_warning",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing event with common distinct_id that gets dropped 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct_id",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct_id",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-1>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing forced person upgrade 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"email":"test@example.com","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"email":"test@example.com","update3":"3","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "1970-01-01 00:00:05",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "propertyless",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-2>",
    },
  },
  {
    "key": "<REPLACED-UUID-3>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "force_upgrade",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:02:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"email":"test@example.com","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$set":{"email":"test@example.com"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"email":"test@example.com","update3":"3","$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$set":{"update3":"3"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:03:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing groups 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_groups_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "group_key": "group-a",
      "group_properties": "{"id":"group-a","foo":"bar"}",
      "group_type_index": 0,
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$groupidentify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$group_type":"a","$group_key":"group-a","$group_set":{"id":"group-a","foo":"bar"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-2>",
    },
  },
  {
    "key": "<REPLACED-UUID-3>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$groupidentify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$group_type":"f","$group_key":"group-f","$group_set":{"id":"group-f","foo":"bar"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-3>",
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$creator_event_uuid":"<REPLACED-UUID-1>"}",
      "project_id": 2,
      "properties": "{"$groups":{"a":"group-a","b":"group-b","c":"group-c","d":"group-d","e":"group-e","f":"group-f"},"$ip":"127.0.0.1","$group_0":"group-a","$group_1":"group-b","$group_2":"group-c","$group_3":"group-d","$group_4":"group-e"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed event 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-1>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-1>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing malformed person information 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "distinct-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-0>"}",
      "project_id": 2,
      "properties": "{"$set":"INVALID","$unset":[[[["definitel invalid"]]]],"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "distinct-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-1>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"0":"I","1":"N","2":"V","3":"A","4":"L","5":"I","6":"D","$creator_event_uuid":"<REPLACED-UUID-0>"}",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing multiple events 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "anonymous-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"https://example.com/page1"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page1","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page1"},"$set_once":{"$initial_current_url":"https://example.com/page1"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "anonymous-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-1>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": "<REPLACED-UUID-2>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-4>","$initial_current_url":"https://example.com/page2"}",
      "project_id": 2,
      "properties": "{"$current_url":"https://example.com/page2","$ip":"127.0.0.1","$set":{"$current_url":"https://example.com/page2"},"$set_once":{"$initial_current_url":"https://example.com/page2"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-2>",
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "identified-id-1",
      "elements_chain": "",
      "event": "$identify",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"$set":{"$email":"test@test.com"},"$anonymous_distinct_id":"anonymous-id-1","$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "identified-id-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-3>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"https://example.com/page1","$creator_event_uuid":"<REPLACED-UUID-0>","$initial_current_url":"https://example.com/page1"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-3>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-3>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$email":"test@test.com","$current_url":"https://example.com/page2","$creator_event_uuid":"<REPLACED-UUID-4>","$initial_current_url":"https://example.com/page2"}",
      "team_id": 2,
      "version": 1,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing normal event 1`] = `
[
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-0>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-1>","$initial_current_url":"http://localhost:8000"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": "<REPLACED-UUID-1>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-0>",
      "person_mode": "full",
      "person_properties": "{"$current_url":"http://localhost:8000","$creator_event_uuid":"<REPLACED-UUID-1>","$initial_current_url":"http://localhost:8000"}",
      "project_id": 2,
      "properties": "{"$current_url":"http://localhost:8000","$ip":"127.0.0.1","$set":{"$current_url":"http://localhost:8000"},"$set_once":{"$initial_current_url":"http://localhost:8000"}}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-1>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "user-1",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-0>",
      "team_id": 2,
      "version": 0,
    },
  },
]
`;

exports[`IngestionConsumer typical event processing person processing off 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "user-1",
      "elements_chain": "",
      "event": "$pageview",
      "person_created_at": "1970-01-01 00:00:05",
      "person_id": "<REPLACED-UUID-1>",
      "person_mode": "propertyless",
      "person_properties": "{}",
      "project_id": 2,
      "properties": "{"$process_person_profile":false,"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
]
`;

exports[`IngestionConsumer typical event processing person property merging via alias 1`] = `
[
  {
    "key": "<REPLACED-UUID-0>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-1>",
      "elements_chain": "",
      "event": "custom event",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-2>",
      "person_mode": "full",
      "person_properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-0>"}",
      "project_id": 2,
      "properties": "{"$set":{"k":"v"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-0>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-2>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-1>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-3>",
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": "<REPLACED-UUID-4>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-5>",
      "elements_chain": "",
      "event": "custom event",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"j":"w","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"$set":{"j":"w"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-4>",
    },
  },
  {
    "key": "<REPLACED-UUID-6>",
    "topic": "clickhouse_events_json_test",
    "value": {
      "created_at": "2025-01-01 00:00:00.000",
      "distinct_id": "<REPLACED-UUID-5>",
      "elements_chain": "",
      "event": "$create_alias",
      "person_created_at": "2025-01-01 00:00:00",
      "person_id": "<REPLACED-UUID-3>",
      "person_mode": "full",
      "person_properties": "{"j":"w","k":"v","l":"x","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "project_id": 2,
      "properties": "{"alias":"<REPLACED-UUID-1>","$set":{"l":"x"},"$ip":"127.0.0.1"}",
      "team_id": 2,
      "timestamp": "2025-01-01 00:00:00.000",
      "uuid": "<REPLACED-UUID-6>",
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_distinct_id_test",
    "value": {
      "distinct_id": "<REPLACED-UUID-5>",
      "is_deleted": 0,
      "person_id": "<REPLACED-UUID-3>",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-3>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"j":"w","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-3>",
      "is_deleted": 0,
      "is_identified": 1,
      "properties": "{"j":"w","k":"v","l":"x","$creator_event_uuid":"<REPLACED-UUID-4>"}",
      "team_id": 2,
      "version": 1,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 0,
      "is_identified": 0,
      "properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-0>"}",
      "team_id": 2,
      "version": 0,
    },
  },
  {
    "key": null,
    "topic": "clickhouse_person_test",
    "value": {
      "created_at": "2025-01-01 00:00:00",
      "id": "<REPLACED-UUID-2>",
      "is_deleted": 1,
      "is_identified": 0,
      "properties": "{"k":"v","$creator_event_uuid":"<REPLACED-UUID-0>"}",
      "team_id": 2,
      "version": 100,
    },
  },
]
`;
